--- a/studies/comments-headings-spacing/comments-headings-spacing.html
+++ b/studies/comments-headings-spacing/comments-headings-spacing.html
@@ -6,6 +6,8 @@
 
 <body>
     <!--  This is a comment  -->
+    <h1>Heading 1</h1>
+
     Look! I'm coding! I'm a super duper coder! * emoji using sunglases *
     <!--
         This is
