created practice1.html, modified notes

--- a/studies/comments-headings-spacing/comments-headings-spacing.html
+++ b/studies/comments-headings-spacing/comments-headings-spacing.html
@@ -7,13 +7,38 @@
 <body>
     <!--  This is a comment  -->
     <h1>Heading 1</h1>
+    <hr>
+    <h2>Heading 2</h2>
+    <hr>
+    <h3>Heading 3</h3>
+    <hr>
+    <h4>Heading 4</h4>
+    <hr>
+    <h5>Heading 5</h5>
+    <hr>
+    <h6>Heading 6</h6>
 
-    Look! I'm coding! I'm a super duper coder! * emoji using sunglases *
+    Look! I'm coding! I'm a super duper coder! * emoji using sunglasses *
     <!--
         This is
         a multiple
         line comment
     -->
+
+    <br>
+
+    <p>
+        Lorem, &nbsp &nbsp &nbsp &nbsp &nbsp ipsum dolor sit amet consectetur adipisicing elit. Fugit culpa provident
+        architecto maxime nisi hic
+        itaque natus obcaecati. Ex cumque labore sequi laudantium atque totam assumenda! Blanditiis neque impedit sit.
+    </p>
+
+    <br>
+
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. At ipsum eos quam placeat odit dignissimos molestiae
+        sint harum earum neque illo accusantium, omnis debitis, dolorum quibusdam optio facilis mollitia autem.
+    </p>
 </body>
 
 </html>
