updated notes, added practice1.html

--- a/studies/text-formatting/text-formatting.html
+++ b/studies/text-formatting/text-formatting.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Good Website</title>
+    <title>Text Formatting</title>
 </head>
 
 <body>
@@ -25,6 +25,15 @@
     <br>
 
     This is <big>big</big> text.
+    <br>
+
+    This is <ins>inserted</ins> text.
+    <br>
+
+    This is <del>deleted</del> text.
+    <br>
+
+    This is <mark>marked</mark> text.
     <br>
 
 </body>
