added study files, updated notes

--- a/studies/css/fonts/practice.html
+++ b/studies/css/fonts/practice.html
@@ -11,33 +11,33 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Practice</title>
 </head>
 
 <body>
     <h1>Practicing Fonts</h1>
 
-    <h3 class="top">Sit amet</h3>
+    <h3>Sit amet</h3>
 
-    <p class="top">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea possimus omnis, ipsa veritatis facilis explicabo, accusantium perferendis natus consequatur maiores tempore et expedita necessitatibus fugiat id facere voluptatem. Optio, tempora.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea possimus omnis, ipsa veritatis facilis explicabo, accusantium perferendis natus consequatur maiores tempore et expedita necessitatibus fugiat id facere voluptatem. Optio, tempora.</p>
 
-    <p class="top">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic possimus enim adipisci perspiciatis repellat voluptate? A saepe veniam libero, soluta unde culpa quaerat, quo natus iure quam temporibus excepturi! Error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero laboriosam voluptatem, quia mollitia illum impedit commodi ipsa quisquam ex ipsum quod praesentium non minima. Minus ipsum ex deleniti praesentium sequi!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic possimus enim adipisci perspiciatis repellat voluptate? A saepe veniam libero, soluta unde culpa quaerat, quo natus iure quam temporibus excepturi! Error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero laboriosam voluptatem, quia mollitia illum impedit commodi ipsa quisquam ex ipsum quod praesentium non minima. Minus ipsum ex deleniti praesentium sequi!</p>
 
-    <h3 class="middle">Consectetur Adipisicing</h3>
+    <h3>Consectetur Adipisicing</h3>
 
-    <p class="middle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cupiditate praesentium vero laboriosam mollitia consequuntur incidunt omnis explicabo similique illo perspiciatis laudantium itaque, aliquam, nam consectetur? Itaque natus non quaerat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi cupiditate praesentium vero laboriosam mollitia consequuntur incidunt omnis explicabo similique illo perspiciatis laudantium itaque, aliquam, nam consectetur? Itaque natus non quaerat.</p>
 
-    <p class="middle" id="middle-paragraph">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere rerum ullamvero dicta est quisquam, quibusdam obcaecati, pariatur laborum maxime natus mollitia commodi at voluptatibus provident modi id accusamus aut."</p>
+    <p id="middle-paragraph">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere rerum ullamvero dicta est quisquam, quibusdam obcaecati, pariatur laborum maxime natus mollitia commodi at voluptatibus provident modi id accusamus aut."</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nulla magni quasi veniam voluptate inventore repudiandae tenetur harum! Ullam beatae, tempore voluptatibus dolorem quisquam sit! Commodi dolores minima pariatur harum.</p>
 
-    <h3 class="bottom">Laborum eos Doloremque Mollitia</h3>
+    <h3>Laborum eos Doloremque Mollitia</h3>
 
-    <p class="bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nihil voluptas cum nostrum perspiciatis deserunt dicta eveniet eum ratione voluptate eos animi unde debitis, minima reprehenderit quos ullam tempora blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis eos nam saepe vitae maxime sequi, ratione cupiditate sunt odit! Dignissimos magni quasi saepe hic incidunt laborum. Numquam, vero repudiandae?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nihil voluptas cum nostrum perspiciatis deserunt dicta eveniet eum ratione voluptate eos animi unde debitis, minima reprehenderit quos ullam tempora blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam blanditiis eos nam saepe vitae maxime sequi, ratione cupiditate sunt odit! Dignissimos magni quasi saepe hic incidunt laborum. Numquam, vero repudiandae?</p>
 
-    <p class="bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam sit id porro aperiam sunt dolores, dolor recusandae quisquam consectetur. Quod id culpa voluptatem earum, voluptas voluptatibus eum aliquam provident.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit totam sit id porro aperiam sunt dolores, dolor recusandae quisquam consectetur. Quod id culpa voluptatem earum, voluptas voluptatibus eum aliquam provident.</p>
 
-    <p class="bottom" id="last-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, laborum eos doloremque mollitia, iste voluptatum ducimus neque magni placeat dolores nulla quo maiores laboriosam molestiae, minima ratione numquam hic dignissimos.</p>
+    <p id="last-paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, laborum eos doloremque mollitia, iste voluptatum ducimus neque magni placeat dolores nulla quo maiores laboriosam molestiae, minima ratione numquam hic dignissimos.</p>
 </body>
 
 </html>
